--- a/design.css
+++ b/design.css
@@ -4,7 +4,7 @@ body{
 html{
     background-color: gray;
 }
-table, td, th{
+table, td{
     border:2px solid black;
     margin-left:auto;
     margin-right:auto;
@@ -12,8 +12,12 @@ table, td, th{
     border-collapse: collapse;
 }
 table{
-    width: 30%;
+    width: 50%;
+    height: 10%;
 }
 p{
     display: inline-block;
+}
+h1{
+    border-bottom: 1px solid black;
 }
